assets/scss/_map.scss
.geo_map {
    & img {
        object-fit: cover;
        // min-height: 900px;
        // min-width: 1900px;
    }
    & .icons-wrap-container {
        background-color: var(--successful);
        padding: 5px;
        border-radius: 5px;
    }
    & .icons-wrap-container i{
        color: var(--white);
    }
    & .icons-wrap-container, & .numerice-icon-number {
        color: var(--white);
    }
    & .zoom-buttons-map {
        overflow: hidden;
        position: absolute;
        bottom: 16px;
        right: 16px;
        padding: 8px 0px;
        border-radius: 8px;
        z-index: 10;
        background-color: var(--neutralBlack);
        display: flex;
        justify-content: center;
        & button {
            height: 24px;
            width: 24px;
            box-shadow: none;
            border: none;
            outline: none;
            margin: 0px 12px;
            background-color: transparent;
            padding: 0px;
            display: flex;
            align-items: center;
            justify-content: center;
            &:first-child{
                position: relative;
                &::before{
                    content: '';
                    width: 1px;
                    height: 100%;
                    background-color: var(--netural-dark);
                    position: absolute;
                    top: 50%;
                    transform: translateY(-50%);
                    right: -12.5px;
                }
            }
        }
        &.geoMapBtns{
            right: 416px;
        }
    }
    & .icon-description-bar {
        width: 100%;
        display: block;			
    }
    & .geomapmain {
        & .svgmap{
            width: 100%;
            height: auto;
        }
        g.node2 ellipse {
            transition: all 0.5s ease-in-out;
            fill: var(--netural-dark) !important;
            cursor: pointer !important;
        }
        g.node2.animation_color ellipse {
            transition: all 0.5s ease-in-out;
            fill: var(--reg-item) !important;
        }
        g.node2 rect {
            cursor: pointer;
        }
        
    }
    &.nonzomm_btn{
        & .zoom-buttons-map {
            display: none;
        }
    }

    & .geomapmain{
        & .svgmap {
            width: 100%;
            height: auto;
            transform: scale(2.5) translate(10px, 19%);
            position: relative;
        }
    }
}
.mapcard{
    background-color: var(--black--dark) !important;
}



.connectMap{
    &>div{
        width: 100% !important;
    }
    background-color: var(--black--dark);
    border-radius: 8px;
}

.geomapleftinfo{
    display: none;
    max-width: 360px;
    width: 100%;
    z-index: 5;
    & .geoInfoCard{
        & .card {
            border: 2px solid var(--reg-item);
        }
    }
}

.mapinformation_card {
    background-color: var(--black--dark) !important;
    & .card-body {
        & .postHeading, & .leftHeading, & .sourceValue{
            font-style: normal;
            font-weight: 400;
        }
        & .postHeading {
            color: var(--netural-dark);
            font-size: 12px;
            line-height: 140%; /* 16.8px */
            margin-bottom: 4PX;
        }
        & .leftHeading {
            color: var(--white-50);
        }
        & .leftHeading, & .sourceValue{
            font-size: 16px;
            line-height: 160%; /* 25.6px */
        }
        & .sourceValue {
            color: var(--white);
        }
    }
}

.map_detailspopup{
    & .overview_map_popupdata {
        user-select: none;
        transform: translate(45.7%, 9.1%);
        position: relative;
        &::before{
            height: calc(100% + 20px);
            width: calc(100% + 20px);
            content: '';
            position: absolute;
            top: 0;
            left: 0;
            transform: translate(-0px , -0px );
            background-color: var(--black--dark);
        }
        & .leftside {
            fill: var(--white-50);
        }
        & .rightside, & .leftside {
            font-size: 10px;
            font-style: normal;
            font-weight: 500;
            line-height: 140%; /* 14px */
        }
        & .rightside {
            fill: var(--white);
        }
        & .rectengals {
            background: var(--black--dark);
            border-radius: 10px;
            border: 2px solid red;
        }
    }
}
.overview_image_container {
    & svg{
        transform: translate(-33%, -5%);
    }
    .overview_map_line, .overview_map_arrow, .overview_map_popupdata {
        display: none;
    }
    .overview_map_line.popupopn, .overview_map_popupdata.popupopn, .overview_map_arrow.popupopn {
        display: block;
    }
}


.listmap{
    &.mapingList {
        & .userDistentCard  {
            & .listItem {
                cursor: pointer;
            }
        }
    }
}

